--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.4.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
