--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@stripe/stripe-js": "^8.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.0",
